Bugfix: Overlap issue occurs on the Power Off confirmation dialog
This patch fixes the bug that layout of confirm dialogue display rightly
when changing the languages.

--- a/ui/css/theme-default/message.css
+++ b/ui/css/theme-default/message.css
@@ -79,7 +79,7 @@
     max-width: 100%;
     max-height: 100%;
     width: 350px;
-    height: 170px;
+    height: 200px;
     z-index: 9999;
 }
 
